Симметричные протоколы в отдельную папку для удобства редактирования, схемы заменены диаграммами последовательностей

--- a/_settings.tex
+++ b/_settings.tex
@@ -23,24 +23,26 @@
 \usepackage{array}                      % Новые команды для работы с таблицами, см. также ниже доопределение стилей ячеек L, C, R
 \usepackage{arydshln}                   % dash lines in tables
 \usepackage{caption}                    % titles for figures
+\usepackage{cjhebrew}
 \usepackage{csquotes}
 \usepackage{enumerate}
 \usepackage{enumitem}                   % кастомизация itemize/enumerate, напр. отказ от indent
 \usepackage{fancybox}                   % страница в рамке
 \usepackage{float}			% sub figures
 \usepackage[totoc=true]{idxlayout}      % балансировка индексов на последней странице, индекс в ToC
+\usepackage{import}
 \usepackage{lscape}                     % поддержка поворота страниц на 90 градусов для широких таблиц
 \usepackage{multicol}                   % поддержка колонок
 \setlength{\columnsep}{0.1cm}
 \usepackage{multirow}                   % multirow cells in tables
+\usepackage{pgf-umlsd}          % UML Sequence Diagramms
 %\usepackage{subfig}			% sub figures
 \usepackage{subcaption}         % sub figures, incompatible with package{subfig}
-\usepackage{tikz}                       % векторная графика внутри TeX
 \usepackage{tablefootnote}		% footnote в таблицах
-\usepackage{wrapfig}			% sub figures
 \usepackage{textcomp}                   % \No support
-\usepackage{cjhebrew}
-\usepackage{import}
+\usepackage{tikz}                       % векторная графика внутри TeX
+\usepackage{wrapfig}			% sub figures
+
 
 \usepackage[left=1.84cm, right=1.5cm, paperwidth=14cm, top=1.8cm, bottom=2cm, height=19.8cm, paperheight=20cm]{geometry}
 
