--- a/protocols/symmetric/needham-schroeder.tex
+++ b/protocols/symmetric/needham-schroeder.tex
@@ -4,9 +4,19 @@
 Протокол Нидхема~---~Шрёдера (\langen{Roger Needham, Michael Shroeder}, 1979,~\cite{Needham:Schroeder:1978}) похож на модифицированный протокол Wide-Mouth Frog, но отличается тем, что доверенный центр (Трент) во время работы основной части протокола не общается со вторым абонентом. Первый абонент получает от доверенного центра специальный пакет, который он без всякой модификации отправляет второму абоненту.
 
 \begin{figure}
-    \centering
-    \includegraphics[width=0.5\textwidth]{pic/key_distribution-needham-schroeder}
-    \caption{Схема взаимодействия абонентов и доверенного центра в протоколе Нидхема~---~Шрёдера\label{fig:key_distribution-needham-schroeder}}
+	\centering
+	\begin{sequencediagram}
+		\newinst{Alice}{Alice}
+		\newinst[3]{Trent}{Trent}
+		\newinst[3]{Bob}{Bob}
+
+		\mess{Alice}{$A, B, R_A$}{Trent}
+		\mess{Trent}{$ E_A \left( R_A, B, K, E_B \left( K, A \right) \right) $}{Alice}
+		\mess{Alice}{$ E_B \left( K, A \right) $}{Bob}
+		\mess{Bob}{$E_K \left( R_B \right)$}{Alice}
+		\mess{Alice}{$E_K \left( R_B - 1 \right)$}{Bob}
+	\end{sequencediagram}
+	\caption{Диаграмма последовательности взаимодействия абонентов и доверенного центра в протоколе Нидхема~---~Шрёдера\label{fig:key_distribution-needham-schroeder}}
 \end{figure}
 
 \begin{protocol}
