Плюс пара диаграмм к протоколам и улучшение оформления (меньше пробелов между абзацами)

--- a/protocols/index.tex
+++ b/protocols/index.tex
@@ -45,7 +45,7 @@
 
 Разумеется, <<идеальный>> протокол должен быть устойчивым ко всем известным атакам, в том числе рассмотренным в разделе~\ref{section-protocols-attacks}.
 
-\input{symmetric}
+\subimport*{symmetric/}{index}
 
 \input{three-pass}
 
