--- a/protocols/symmetric/needham-schroeder.tex
+++ b/protocols/symmetric/needham-schroeder.tex
@@ -1,9 +1,9 @@
 \subsection{Протокол Нидхема~---~Шрёдера}\index{протокол!Нидхема~---~Шрёдера|(}\label{section-protocols-needham-schroeder}
 \selectlanguage{russian}
 
-Протокол Нидхема~---~Шрёдера (\langen{Roger Needham, Michael Shroeder}, 1979,~\cite{Needham:Schroeder:1978}) похож на модифицированный протокол Wide-Mouth Frog, но отличается тем, что доверенный центр (Трент) во время работы основной части протокола не общается со вторым абонентом. Первый абонент получает от доверенного центра специальный пакет, который он без всякой модификации отправляет второму абоненту.
+Протокол Нидхема~---~Шрёдера (\langen{Roger Needham, Michael Shroeder}, 1979,~\cite{Needham:Schroeder:1978}, рис.~\ref{fig:key_distribution-needham-schroeder}) похож на модифицированный протокол <<Wide-Mouth Frog>>, но отличается тем, что доверенный центр (Трент) во время работы основной части протокола не общается со вторым абонентом. Первый абонент получает от доверенного центра специальный пакет, который он без всякой модификации отправляет второму абоненту.
 
-\begin{figure}
+\begin{figure}[thb]
 	\centering
 	\begin{sequencediagram}
 		\newinst{Alice}{Alice}
@@ -27,11 +27,35 @@
 	\item[(5)] $ Alice	\to \{ E_K \left( R_B - 1 \right) \}				\to Bob $
 \end{protocol}
 
-Протокол удобен с точки зрения сетевого взаимодействия участников (рис.~\ref{fig:key_distribution-needham-schroeder}). И общение с доверенным центром, и с конечным участником (Бобом) начинается только по инициативе первого участника (Алисы). При возникновении любых проблем передачи пакетов их видит именно то лицо, которое заинтересованно в получении ключей и доступов\footnote{Сравните с протоколом Yahalom, в котором при возникновении проблемы общения Трента и Алисы на третьем проходе Тренту потребовалось бы уведомить об этом Боба, а Бобу, в свою очередь, Алису.}. И если бы общение шло с использование протокола TCP/IP, потребовалось бы всего 2 сессии протокола TCP для выработки ключа. Причём последнюю сессию можно не закрывать, а использовать как сессию для дальнейшего взаимодействия уже с ключом $K$.
+Протокол удобен с точки зрения сетевого взаимодействия участников. И общение с доверенным центром, и с конечным участником (Бобом) начинается только по инициативе первого участника (Алисы). При возникновении любых проблем передачи пакетов их видит именно то лицо, которое заинтересованно в получении ключей и доступов\footnote{Сравните с протоколом <<Yahalom>>, в котором при возникновении проблемы общения Трента и Алисы на третьем проходе Тренту потребовалось бы уведомить об этом Боба, а Бобу, в свою очередь, Алису.}. И если бы общение шло с использование протокола TCP/IP, потребовалось бы всего 2 сессии протокола TCP для выработки ключа. Причём последнюю сессию можно не закрывать, а использовать для дальнейшего взаимодействия уже с ключом $K$.
 
-Протокол обеспечивает и двустороннюю аутентификацию сторон, и, казалось бы, защиту от атак с повторной передачей (\langen{replay attack}). Последнее делается с помощью введения уже известных по модифицированному протоколу Wide-Mouth Frog случайных меток $R_A$ и $R_B$. Действительно, без знания ключа злоумышленник не сможет выдать себя за Алису перед Бобом (так как не сможет расшифровать пакет с зашифрованной меткой $R_B$).
+Протокол обеспечивает и двустороннюю аутентификацию сторон, и, казалось бы, защиту от атак с повторной передачей (\langen{replay attack}). Последнее делается с помощью введения уже известных по модифицированному протоколу <<Wide-Mouth Frog>> случайных меток $R_A$ и $R_B$. Действительно, без знания ключа злоумышленник не сможет выдать себя за Алису перед Бобом (так как не сможет расшифровать пакет с зашифрованной меткой $R_B$).
 
-Однако протокол уязвим к атаке с известным сеансовым ключом. Если злоумышленник сумеет в какой-то момент времени получить ранее использованный сессионный ключ $K$, он сможет убедить Боба, что он является Алисой, и что это новый сессионный ключ. Для этого ему понадобится переданный ранее по открытому каналу пакет из пункта 3 протокола.
+Относительно мелкий недостаток протокола в том, что во втором пакете доверенный центр в зашифрованном виде передаёт то, что в третьем шаге пересылается по открытому каналу ($E_B \left( K, A \right)$).
+
+Но серьёзный недостаток связан с уязвимостью протокола к атаке с известным сеансовым ключом. Если злоумышленник сумеет в какой-то момент времени получить ранее использованный сессионный ключ $K$, он сможет убедить Боба, что он является Алисой, и что это новый сессионный ключ. Для этого ему понадобится переданный ранее по открытому каналу пакет из пункта 3 протокола (рис.~\ref{fig:key_distribution-needham-schroeder-attack}).
+
+\begin{figure}[thb]
+	\centering
+	\begin{sequencediagram}
+		\newinst{Alice}{Alice}
+		\newinst[1]{Trent}{Trent}
+		\newinst[1]{Eva}{Eva}
+		\newinst[1]{Bob}{Bob}
+
+		\mess{Alice}{$A, B, R_A$}{Trent}
+		\mess{Trent}{$ E_A \left( R_A, B, K, E_B \left( K, A \right) \right) $}{Alice}
+		\mess{Alice}{$ E_B \left( K, A \right) $}{Bob}
+		\mess{Bob}{$ E_K \left( R_B \right)$}{Alice}
+		\mess{Alice}{$E_K \left( R_B - 1 \right)$}{Bob}
+
+		\begin{callself}{Eva}{получение ключа K}{}\end{callself}
+		\mess{Eva}{$ E_B \left( K, A \right) $}{Bob}
+		\mess{Bob}{$ E_K \left( R_B \right) $}{Eva}
+		\mess{Eva}{$ E_K \left( R_B - 1 \right) $}{Bob}
+	\end{sequencediagram}
+	\caption{Диаграмма последовательности атаки с известным сеансовым ключом в протоколе Нидхема~---~Шрёдера\label{fig:key_distribution-needham-schroeder-attack}}
+\end{figure}
 
 \begin{protocol}
 	\item[(1)] $ Eva \to \{ A, B, R_A \} \to Trent $
@@ -45,8 +69,6 @@
 	\item[(8)] $ Eva (Alice) \to \{ E_K \left( R_B - 1 \right) \} \to Bob $
 \end{protocol}
 
-Относительно мелкий недостаток протокола состоит ещё и в том, что во втором пакете доверенный центр в зашифрованном виде передаёт то, что в третьем шаге пересылается по открытому каналу ($E_B \left( K, A \right)$).
-
-Если в протокол добавить метки времени, тем самым ограничив время возможного использования сессионного ключа, а также исправить мелкий недостаток с двойным шифрованием, можно получить протокол, который лежит в основе распространённого средства аутентификации <<Kerberos>> для локальных сетей.
+Если в протокол Нидхема~---~Шрёдера добавить метки времени, тем самым ограничив время возможного использования сессионного ключа, а также исправить мелкий недостаток с двойным шифрованием, можно получить протокол, который лежит в основе распространённого средства аутентификации <<Kerberos>> для локальных сетей.
 
 \index{протокол!Нидхема~---~Шрёдера|)}
